warning and binding cleanup

--- a/Views/Pages/HostMigrationPage.xaml
+++ b/Views/Pages/HostMigrationPage.xaml
@@ -1,93 +1,27 @@
-﻿<Page
-    x:Class="VCenterMigrationTool.Views.Pages.HostMigrationPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:viewmodels="clr-namespace:VCenterMigrationTool.ViewModels"
-    xmlns:helpers="clr-namespace:VCenterMigrationTool.Helpers"
-    mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance viewmodels:HostMigrationViewModel, IsDesignTimeCreatable=False}"
-    Title="HostMigrationPage"
-    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}">
-
+﻿<Page x:Class="VCenterMigrationTool.Views.Pages.HostMigrationPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      xmlns:viewmodels="clr-namespace:VCenterMigrationTool.ViewModels"
+      xmlns:helpers="clr-namespace:VCenterMigrationTool.Helpers"
+      mc:Ignorable="d" 
+      d:DataContext="{d:DesignInstance Type=viewmodels:HostMigrationViewModel}"
+      Title="HostMigrationPage">
     <Page.Resources>
         <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         <helpers:BoolToParameterConverter x:Key="BoolToParameterConverter" />
         <helpers:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
-
     </Page.Resources>
     <Grid Margin="42">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="200" />
-        </Grid.RowDefinitions>
-
         <TextBlock Grid.Row="0" FontSize="24" FontWeight="Medium" Text="ESXi Host Migration" />
 
-        <Grid Grid.Row="1" Margin="0,20,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="20" />
-                <ColumnDefinition Width="300" />
-            </Grid.ColumnDefinitions>
-
-            <GroupBox Grid.Column="0" Header="Select Hosts to Migrate (from Source vCenter)">
-                <TreeView ItemsSource="{Binding ViewModel.SourceTopology}">
-                    <TreeView.ItemTemplate>
-                        <HierarchicalDataTemplate ItemsSource="{Binding Hosts}">
-                            <TextBlock Text="{Binding Name}" FontWeight="Medium" />
-                            <HierarchicalDataTemplate.ItemTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Horizontal">
-                                        <CheckBox IsChecked="{Binding IsSelected}" VerticalAlignment="Center"/>
-                                        <TextBlock Text="{Binding Name}" Margin="5,0,0,0" />
-                                    </StackPanel>
-                                </DataTemplate>
-                            </HierarchicalDataTemplate.ItemTemplate>
-                        </HierarchicalDataTemplate>
-                    </TreeView.ItemTemplate>
-                </TreeView>
-            </GroupBox>
-
-            <GroupBox Grid.Column="2" Header="Select Target Cluster (in Target vCenter)">
-                <Grid>
-                    <ComboBox
-                        ItemsSource="{Binding ViewModel.TargetClusters}" 
-                        SelectedItem="{Binding ViewModel.SelectedTargetCluster}"
-                        DisplayMemberPath="Name"/>
-                    <TextBlock
-                        IsHitTestVisible="False"
-                        Text="Select a target cluster"
-                        VerticalAlignment="Center"
-                        HorizontalAlignment="Left"
-                        Margin="12,0,0,0"
-                        Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                        Visibility="{Binding ViewModel.SelectedTargetCluster, Converter={StaticResource NullToVisibilityConverter}}"/>
-                </Grid>
-            </GroupBox>
-        </Grid>
-
-        <StackPanel Grid.Row="2" Margin="0,20,0,10">
-            <ui:Button 
-                Content="Migrate Selected Hosts"
-                Command="{Binding ViewModel.MigrateHostsCommand}"
-                Appearance="Primary"
-                Icon="ArrowSwap24"
-                IsEnabled="{Binding ViewModel.IsBusy, Converter={StaticResource BoolToParameterConverter}, ConverterParameter=inverse}"/>
-            <ui:ProgressRing Margin="0,10,0,0" IsIndeterminate="True" Visibility="{Binding ViewModel.IsBusy, Converter={StaticResource BoolToVisibilityConverter}}"/>
-        </StackPanel>
-
-        <ui:TextBox
-            Grid.Row="3"
-            Text="{Binding ViewModel.LogOutput, Mode=OneWay}"
-            IsReadOnly="True"
-            AcceptsReturn="True"
-            VerticalScrollBarVisibility="Auto"
-            FontFamily="Consolas"/>
+        <TreeView ItemsSource="{Binding SourceTopology}" />
+        <ComboBox ItemsSource="{Binding TargetClusters}" SelectedItem="{Binding SelectedTargetCluster}" />
+        <TextBlock Visibility="{Binding SelectedTargetCluster, Converter={StaticResource NullToVisibilityConverter}}" />
+        <Button Command="{Binding MigrateHostsCommand}" IsEnabled="{Binding IsBusy, Converter={StaticResource BoolToParameterConverter}, ConverterParameter=inverse}"/>
+        <ui:ProgressRing Visibility="{Binding IsBusy, Converter={StaticResource BoolToVisibilityConverter}}" />
+        <ui:TextBox Text="{Binding LogOutput, Mode=OneWay}" />
     </Grid>
 </Page>
