--- a/Views/Pages/VCenterMigrationPage.xaml
+++ b/Views/Pages/VCenterMigrationPage.xaml
@@ -1,98 +1,73 @@
-﻿<Page
-    x:Class="VCenterMigrationTool.Views.Pages.VCenterMigrationPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    xmlns:viewmodels="clr-namespace:VCenterMigrationTool.ViewModels"
-    xmlns:helpers="clr-namespace:VCenterMigrationTool.Helpers"
-    mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance viewmodels:VCenterMigrationViewModel, IsDesignTimeCreatable=False}"
-    Title="VCenterMigrationPage"
-    ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
-    ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}">
-
+﻿<Page x:Class="VCenterMigrationTool.Views.Pages.VCenterMigrationPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      xmlns:viewmodels="clr-namespace:VCenterMigrationTool.ViewModels"
+      xmlns:helpers="clr-namespace:VCenterMigrationTool.Helpers"
+      mc:Ignorable="d" 
+      d:DataContext="{d:DesignInstance Type=viewmodels:VCenterMigrationViewModel}"
+      Title="VCenterMigrationPage">
     <Page.Resources>
         <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+        <helpers:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
         <helpers:BoolToParameterConverter x:Key="BoolToParameterConverter" />
     </Page.Resources>
     <Grid Margin="42">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="200" />
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0" FontSize="24" FontWeight="Medium" Text="vCenter Object Migration" />
-        <TextBlock Grid.Row="1" Margin="0,5,0,0" Text="Select objects to migrate and monitor the progress." Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
 
-        <Grid Grid.Row="2" Margin="0,20,0,0">
+        <Grid Grid.Row="1" Margin="0,20,0,0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="350" />
-                <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="20" />
+                <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
 
-            <ScrollViewer Grid.Column="0" VerticalScrollBarVisibility="Auto">
+            <ui:CardControl Grid.Column="0">
                 <StackPanel>
-                    <TextBlock Text="Standard Options" FontSize="16" FontWeight="Medium" />
-                    <CheckBox IsChecked="{Binding ViewModel.MigrateRolesAndPermissions}" Content="Roles and Permissions" Margin="0,10,0,10"/>
-                    <CheckBox IsChecked="{Binding ViewModel.MigrateVmFolders}" Content="VM and Template Folders" Margin="0,0,0,10"/>
-                    <CheckBox IsChecked="{Binding ViewModel.MigrateTagsAndCategories}" Content="Tags and Categories" Margin="0,0,0,20"/>
+                    <TextBlock Text="Select Objects to Migrate" FontWeight="Medium" />
+                    <CheckBox IsChecked="{Binding MigrateRoles}" Content="Roles and Permissions" Margin="0,10,0,0" />
+                    <CheckBox IsChecked="{Binding MigrateFolders}" Content="VM and Template Folders" Margin="0,5,0,0" />
+                    <CheckBox IsChecked="{Binding MigrateTags}" Content="Tags and Categories" Margin="0,5,0,0" />
 
-                    <TextBlock Text="Cluster-Specific Options" FontSize="16" FontWeight="Medium" />
-                    <TextBlock Text="Select a cluster to see its resources." Margin="0,5,0,10" Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
-                    <Grid>
-                        <ComboBox
-                            ItemsSource="{Binding ViewModel.Clusters}"
-                            SelectedItem="{Binding ViewModel.SelectedCluster}"
-                            DisplayMemberPath="Name"/>
-                        <TextBlock
-                            IsHitTestVisible="False"
-                            Text="Select a source cluster"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Left"
-                            Margin="12,0,0,0"
-                            Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                            Visibility="{Binding ViewModel.SelectedCluster, Converter={StaticResource NullToVisibilityConverter}}"/>
-                    </Grid>
-
-                    <ListView Margin="0,10,0,20" ItemsSource="{Binding ViewModel.ClusterItems}" MaxHeight="200">
-                        <ListView.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <CheckBox IsChecked="{Binding IsSelected}"/>
-                                    <TextBlock Text="{Binding Name}" Margin="5,0,0,0"/>
-                                    <TextBlock Text="{Binding Type, StringFormat='({0})'}" Margin="5,0,0,0" Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
+                    <TextBlock Text="Cluster-Specific Objects" FontWeight="Medium" Margin="0,20,0,5" />
+                    <ComboBox ItemsSource="{Binding SourceClusters}" SelectedItem="{Binding SelectedSourceCluster}" DisplayMemberPath="Name" />
+                    <TextBlock Visibility="{Binding IsLoadingClusterItems, Converter={StaticResource BoolToVisibilityConverter}}" Text="Loading items..." Margin="0,5,0,0"/>
+                    <ListView ItemsSource="{Binding ClusterItems}" Margin="0,10,0,0" MaxHeight="200">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn>
+                                    <GridViewColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <CheckBox IsChecked="{Binding IsSelected}" />
+                                        </DataTemplate>
+                                    </GridViewColumn.CellTemplate>
+                                </GridViewColumn>
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="*" />
+                                <GridViewColumn Header="Type" DisplayMemberBinding="{Binding Type}" Width="100" />
+                            </GridView>
+                        </ListView.View>
                     </ListView>
-
-                    <ui:Button 
-                        Content="Start Migration" 
-                        Command="{Binding ViewModel.StartMigrationCommand}"
-                        Appearance="Primary"
-                        Icon="Play24"
-                        IsEnabled="{Binding ViewModel.IsBusy, Converter={StaticResource BoolToParameterConverter}, ConverterParameter=inverse}"/>
                 </StackPanel>
-            </ScrollViewer>
+            </ui:CardControl>
 
-            <Grid Grid.Column="2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
+            <ui:CardControl Grid.Column="2">
+                <StackPanel>
+                    <TextBlock Text="Migration Status" FontWeight="Medium" />
+                    <ui:Button Command="{Binding StartMigrationCommand}" Content="Start Migration" Appearance="Primary" Margin="0,10,0,0" IsEnabled="{Binding IsMigrating, Converter={StaticResource BoolToParameterConverter}, ConverterParameter=inverse}" />
 
-                <GroupBox Grid.Row="0" Header="Migration Progress">
-                    <DataGrid 
-                        ItemsSource="{Binding ViewModel.MigrationTasks}"
-                        AutoGenerateColumns="False"
-                        IsReadOnly="True">
+                    <DataGrid ItemsSource="{Binding MigrationTasks}" AutoGenerateColumns="False" Margin="0,10,0,0" IsReadOnly="True">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Object" Binding="{Binding ObjectName}" Width="*"/>
-                            <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="100"/>
+                            <DataGridTextColumn Header="Object Name" Binding="{Binding ObjectName}" Width="*" />
+                            <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="100" />
                             <DataGridTemplateColumn Header="Progress" Width="120">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
@@ -100,26 +75,18 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTextColumn Header="Details" Binding="{Binding Details}" Width="*"/>
+                            <DataGridTextColumn Header="Details" Binding="{Binding Details}" Width="*" />
                         </DataGrid.Columns>
                     </DataGrid>
-                </GroupBox>
-
-                <GroupBox Grid.Row="1" Header="Overall Progress" Margin="0,10,0,0">
-                    <StackPanel>
-                        <TextBlock Text="{Binding ViewModel.CurrentTaskText}" FontWeight="Medium"/>
-                        <Grid Margin="0,5,0,0">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <ProgressBar Grid.Column="0" Value="{Binding ViewModel.OverallProgress}" Maximum="100" />
-                            <TextBlock Grid.Column="1" Text="{Binding ViewModel.OverallProgress, StringFormat={}{0}%}" Margin="10,0,0,0"/>
-                        </Grid>
-                        <ui:ProgressRing Margin="0,5,0,0" IsIndeterminate="True" Visibility="{Binding ViewModel.IsBusy, Converter={StaticResource BoolToVisibilityConverter}}"/>
-                    </StackPanel>
-                </GroupBox>
-            </Grid>
+                </StackPanel>
+            </ui:CardControl>
         </Grid>
+
+        <StackPanel Grid.Row="2" Margin="0,20,0,10">
+            <TextBlock Text="{Binding OverallStatus}" FontWeight="Medium" />
+            <ProgressBar Value="{Binding OverallProgress}" Maximum="100" Margin="0,5,0,0" />
+        </StackPanel>
+
+        <ui:TextBox Grid.Row="3" Text="{Binding CurrentTaskDetails}" IsReadOnly="True" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" FontFamily="Consolas"/>
     </Grid>
 </Page>
