--- a/Views/Pages/VCenterMigrationPage.xaml
+++ b/Views/Pages/VCenterMigrationPage.xaml
@@ -21,23 +21,19 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="200" />
         </Grid.RowDefinitions>
-
         <TextBlock Grid.Row="0" FontSize="24" FontWeight="Medium" Text="vCenter Object Migration" />
-
         <Grid Grid.Row="1" Margin="0,20,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="20" />
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
-
             <ui:CardControl Grid.Column="0">
                 <StackPanel>
                     <TextBlock Text="Select Objects to Migrate" FontWeight="Medium" />
                     <CheckBox IsChecked="{Binding MigrateRoles}" Content="Roles and Permissions" Margin="0,10,0,0" />
                     <CheckBox IsChecked="{Binding MigrateFolders}" Content="VM and Template Folders" Margin="0,5,0,0" />
                     <CheckBox IsChecked="{Binding MigrateTags}" Content="Tags and Categories" Margin="0,5,0,0" />
-
                     <TextBlock Text="Cluster-Specific Objects" FontWeight="Medium" Margin="0,20,0,5" />
                     <ComboBox ItemsSource="{Binding SourceClusters}" SelectedItem="{Binding SelectedSourceCluster}" DisplayMemberPath="Name" />
                     <TextBlock Visibility="{Binding IsLoadingClusterItems, Converter={StaticResource BoolToVisibilityConverter}}" Text="Loading items..." Margin="0,5,0,0"/>
@@ -51,19 +47,17 @@
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
-                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="*" />
+                                <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
                                 <GridViewColumn Header="Type" DisplayMemberBinding="{Binding Type}" Width="100" />
                             </GridView>
                         </ListView.View>
                     </ListView>
                 </StackPanel>
             </ui:CardControl>
-
             <ui:CardControl Grid.Column="2">
                 <StackPanel>
                     <TextBlock Text="Migration Status" FontWeight="Medium" />
                     <ui:Button Command="{Binding StartMigrationCommand}" Content="Start Migration" Appearance="Primary" Margin="0,10,0,0" IsEnabled="{Binding IsMigrating, Converter={StaticResource BoolToParameterConverter}, ConverterParameter=inverse}" />
-
                     <DataGrid ItemsSource="{Binding MigrationTasks}" AutoGenerateColumns="False" Margin="0,10,0,0" IsReadOnly="True">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Object Name" Binding="{Binding ObjectName}" Width="*" />
@@ -81,12 +75,10 @@
                 </StackPanel>
             </ui:CardControl>
         </Grid>
-
         <StackPanel Grid.Row="2" Margin="0,20,0,10">
             <TextBlock Text="{Binding OverallStatus}" FontWeight="Medium" />
             <ProgressBar Value="{Binding OverallProgress}" Maximum="100" Margin="0,5,0,0" />
         </StackPanel>
-
         <ui:TextBox Grid.Row="3" Text="{Binding CurrentTaskDetails}" IsReadOnly="True" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" FontFamily="Consolas"/>
     </Grid>
 </Page>
