--- a/Views/Pages/Settings/PowerShellSettingsView.xaml
+++ b/Views/Pages/Settings/PowerShellSettingsView.xaml
@@ -128,6 +128,10 @@
                     </Style>
                 </ui:Button.Style>
             </ui:Button>
+            <TextBlock Text="{Binding DebugBypassStatus}" 
+                       Foreground="Orange" 
+                       FontWeight="Bold" 
+                       Margin="0,10,0,0"/>
         </StackPanel>
 
         <!-- Success Message -->
